Added some layout

--- a/static/KYS/css/master.css
+++ b/static/KYS/css/master.css
@@ -21,4 +21,10 @@ body {
   user-select: none;
   font-family: Arial;
 }
-
+.dropdown-item{
+  background-color: blue;
+  color: white;
+}
+.dropdown-menu{
+  background-color: blue;
+}
