--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,27 @@
         font-size: 18px;
       }
     }
+    /* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(146, 92, 92)
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: ; 
+}
   </style>
   {% block css %}
 
@@ -86,15 +107,16 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+          
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           
+             <ul class="navbar-nav mr-auto">
               {% if user.is_authenticated %}
               <li class="nav-item dropdown" class="">
-                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Current Campus Junta
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <a class="dropdown-item" href="{% url 'bios:all' %}">Profiles of Seniors</a>
                   {% if not user.bio %}
                   <a class="dropdown-item" href="{% url 'bios:bio_create' %}">CREATE Bio</a>
