--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block css %}
   <style>
     #tabs{
-      background-color:cornsilk;
+      background-color:rgb(233, 230, 218);
       color: black;
     }
     .card-title{
