added project detail page

--- a/templates/base.html
+++ b/templates/base.html
@@ -83,13 +83,13 @@
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(146, 92, 92)
+  background: rgb(146, 92, 92);
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: ; 
+  background: black ; 
 }
   </style>
   {% block css %}
