--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <br><br>
-<div class="container">
+<div class="container" style="color: white;">
 
 
 <h1>{% trans "Sign In" %}</h1>
