--- a/templates/base.html
+++ b/templates/base.html
@@ -1,240 +1,116 @@
+
 <!DOCTYPE html>
-{% load static %}
-<html lang="en" dir="ltr">
+<html lang="pt-br" dir="ltr">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="google-signin-client_id" content="AIzaSyA2P9yuTDm_LT57W1q_mJLxyV-RwxqKp0A">
-  <title>Cepstrum</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
-  <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="{% static 'KYS/css/master.css' %}">
-  <link rel="stylesheet" href="{% static 'KYS/css/login.css' %}">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/stylewise.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1,
+      shrink-to-fit=no">
+    <title>Home | Cepstrum</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  </head>
   <style>
-    body {
-      font-family: "Lato", sans-serif;
-    }
-
-    .sidenav {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background-color: #111;
-      overflow-x: hidden;
-      transition: 0.5s;
-      padding-top: 60px;
-    }
-
-    .sidenav a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-      transition: 0.3s;
-    }
-
-    .sidenav a:hover {
-      color: #f1f1f1;
-    }
-
-    .sidenav .closebtn {
-      position: absolute;
-      top: 0;
-      right: 25px;
-      font-size: 36px;
-      margin-left: 50px;
-    }
-
-    #main {
-      transition: margin-left .5s;
-      padding: 16px;
-    }
-
-    @media screen and (max-height: 450px) {
-      .sidenav {
-        padding-top: 15px;
-      }
-
-      .sidenav a {
-        font-size: 18px;
-      }
-    }
-    /* width */
-::-webkit-scrollbar {
-  width: 20px;
+  .my-nav{
+position: absolute;
+z-index: 10;
+width: 100%;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgb(146, 92, 92);
-  border-radius: 10px;
+
+body{
+  background-color: black;
+  color: white;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: black ; 
-}
-  </style>
-  {% block css %}
 
-  {% endblock %}
-</head>
 
-<body>
-  <div id="main">
-      <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="http://www.iitg.ac.in/scifac/cep/public_html/common/logo.svg" width="100" height="30" alt="">
+
+
+</style>
+
+{% block css %}
+  
+{% endblock css %}
+  
+  <body>
+<!-- loader -->
+
+<!-- loaderend -->
+<nav class="my-nav navbar navbar-expand-lg navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'home' %}"> <img
+      src="https://www.iitg.ac.in/cepstrum/common/logo.svg"
+      width="40%" height="40%" alt=""></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        {% if user.is_authenticated %}
+        <li class="nav-item dropdown" class="">
+          <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Current Campus Junta
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-           
-             <ul class="navbar-nav mr-auto">
-              {% if user.is_authenticated %}
-              <li class="nav-item dropdown" class="">
-                <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Current Campus Junta
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="{% url 'bios:all' %}">Profiles of Seniors</a>
-                  {% if not user.bio %}
-                  <a class="dropdown-item" href="{% url 'bios:bio_create' %}">CREATE Bio</a>
-                  {% endif %}
-                  <a class="dropdown-item" href="{% url 'bios:project_list' %}">Project List</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown" class="">
-                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Alumni
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'alumni:all' %}">Profiles of Alumni</a>
-                  {% if not user.alumni_bio and not user.bio %}
-                  <a class="dropdown-item" href="{% url 'alumni:alumni_create' %}">CREATE Bio</a>
-                  {% endif %}
-                </div>
-              </li>
-              <li class="nav-item dropdown" class="">
-                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Account Management
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'account_email' %}">Update Email</a>
-                  <a class="dropdown-item" href="{% url 'account_set_password' %}">Set your password</a>
-                </div>
-              </li>
-              {% else %}
-
-              {% endif %}
-            </ul>
-            <ul class="navbar-nav ml-auto">
-              {% if user.is_authenticated %}
-              <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">LOGOUT</a></li>
-              {% else %}
-              <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">Login</a></li>
-              {% endif %}
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="{% url 'bios:all' %}">Profiles of Seniors</a>
+            {% if not user.bio %}
+            <a class="dropdown-item" href="{% url 'bios:bio_create' %}">CREATE Bio</a>
+            {% endif %}
+            <a class="dropdown-item" href="{% url 'bios:project_list' %}">Project List</a>
           </div>
-          </ul>
-        </nav>
-       </header>
+        </li>
+        <li class="nav-item dropdown" class="">
+          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Alumni
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'alumni:all' %}">Profiles of Alumni</a>
+            {% if not user.alumni_bio and not user.bio %}
+            <a class="dropdown-item" href="{% url 'alumni:alumni_create' %}">CREATE Bio</a>
+            {% endif %}
+          </div>
+        </li>
+        <li class="nav-item dropdown" class="">
+          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Account Management
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'account_email' %}">Update Email</a>
+            <a class="dropdown-item" href="{% url 'account_set_password' %}">Set your password</a>
+          </div>
+        </li>
+        {% else %}
 
-       <div class="">
-      <div class="container" id="one">
-        {% block content %}
-
-        {% endblock %}
-      </div>
-      {% block body_block %}
-
-      {% endblock %}
+        {% endif %}
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        {% if user.is_authenticated %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">LOGOUT</a></li>
+        {% else %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">Login</a></li>
+        {% endif %}
+    </div>
+      </ul>
 
     </div>
-
-    <!-- This is footer -->
-    <footer class="footer">
-
-      <div class="container-fluid card footer bg-dark">
-        <div id="contact" class="row">
-          <div class="col-md-2">
-            <h3><strong>Quick links</strong></h3>
-            <a style="color:white;" class="btn" href="http://www.iitg.ac.in/">IIT Guwahati</a>
-            <br><a style="color:white;" class="btn" href="http://www.iitg.ac.in/eee/">Department of EEE</a>
-          </div>
-          <div class="col-md-8">
-            <h3 style="text-align:center;"><strong>Contact Us</strong></h3>
-            <div class="row">
-              <div class="col-md-6">
-                <p> <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z" />
-                  </svg> : cepstrum@iitg.ac.in<br> General Secretary (Parag Agrawal): 8265874092<br> Assoc. Gen Sec
-                  (Aarya Shrivastava): 9954101510</p>
-              </div>
-              <div class="col-md-6">
-                <p> <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                      d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z" />
-                  </svg> (InPhase): inphase@iitg.ac.in <br> Chief Editor (Samruddhi Marathe): 7578877155 <br>Web Ops:(Stuti K):9549213999 <br>Web Ops: (Samaksh Tak):9414175382 </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2">
-            <h3><strong>Follow Us</strong></h3>
-            <a style="color:white;" href="https://www.facebook.com/Cepstrum/">Facebook <i class="fa fa-lg fa-facebook"></i> </a>
-            <br><a style="color:white;" href="https://medium.com/@cepstrumeeeiitg">Medium <i class="fa fa-lg fa-medium"></i> </a>
-            <br><a style="color:white;" href="https://www.linkedin.com/company/cepstrum">Linkedin <i class="fa fa-lg fa-linkedin"></i> </a>
-            <br><a style="color:white;" href="https://www.instagram.com/cepstrum_iitg/">Instagram <i class="fa fa-lg fa-instagram"></i> </a>
-            <br><a style="color:white;" href="https://www.youtube.com/user/ECEatIITG">YouTube <i class="fa fa-lg fa-youtube-play"></i> </a>
-          </div>
-        </div>
-        <div class="row credits">
-          <div class="col-md-8" style="text-align:center;">
-            <em><strong>Behind the code and design: </strong>Jayant Jaiswal</em>
-          </div>
-          <div class="col-md-8">
-            <!-- <em><strong>Behind the content: </strong> Sai Bhaskar, Uddeshya Mathur, Sasank Gurajapu</em> -->
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- This is footer end -->
   </div>
-</body>
-{% block extrajs %}
+</nav>
 
-{% endblock %}
-<!-- jQuery library -->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!-- font awesome library -->
-<script type="text/javascript" src="https://use.fontawesome.com/c2f7320238.js"></script>
-<script src="{% static 'KYS/js/master.js' %}" type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+{% block carousel %}
+  
+{% endblock carousel %}
+
+{% block content %}
+  
+{% endblock content %}
+  
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>  
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
 
 </html>
