--- a/templates/index.html
+++ b/templates/index.html
@@ -2,33 +2,27 @@
 {% load static %}
 {% block css %}
   <style>
-    #tabs{
-      background-color:rgb(233, 230, 218);
-      color: black;
-    }
-    .card-title{
-      color: black;
-    }
-    .card-text{
-      color: black;
-    }
-    #event{
-      background: url(https://media.gettyimages.com/photos/white-clean-calendar-on-solid-yellow-background-with-copy-space-or-picture-id1005983884?b=1&k=6&m=1005983884&s=612x612&w=0&h=jUiwnohflsdiEPIQ51fEAvABU9Qq7G9fJ4gaFA3Wits=);
-    }
-    #home{
-      padding-right: 10% ;
-      padding-left: 10%;
-      padding-bottom: 5%;
-    }
-    #profile{
-      padding-right: 10% ;
-      padding-left: 10%;
-      padding-bottom: 5%;
-    }
+    .carousel-item {
+  height: 100vh;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+.content{
+  text-align: center;
+  padding-top: 5%;
+  padding-right: 60%;
+  padding-left: 4%;
+  color: white;
+  
+}
   </style>
   
 {% endblock %}
-{% block body_block %}
+{% block carousel %}
     {% if user.is_authenticated %}
     <br><br>
         <div class="alert alert-success" style="padding-left: 40%;" role="alert">
@@ -36,112 +30,53 @@
             You are now Logged in
         </div>
     {% endif %}
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="bd-placeholder-img" width="100%" height="100%" src="http://www.iitg.ac.in/scifac/cep/public_html/home/dept3.jpg" alt="Depts Image">
-            <!--<div class="container">
-              <div class="carousel-caption text-left">
-                <h1>Example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-              </div>
-            </div>-->
-          </div>
-          <div class="carousel-item">
-            <img class="bd-placeholder-img" width="100%" height="100%" src="http://www.iitg.ac.in/scifac/cep/public_html/home/dept4.jpg" alt="Depts Image">
-            <!--<div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-              </div>
-            </div>-->
-          </div>
-          <div class="carousel-item">
-            <img class="bd-placeholder-img" width="100%" height="100%" src="http://www.iitg.ac.in/scifac/cep/public_html/home/dept1.jpg" alt="Depts Image">
-            <!--<div class="container">
-              <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-              </div>
-            </div>-->
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+    <div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0"
+        class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active" style="background-image:
+        url('home/dept4.jpg')">
+        
       </div>
-      <br>
-      <div class="container" id="tabs">
-        <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About Cepstrum</a>
-          </li>
-          <li class="nav-item" role="presentation">
-            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">About Department</a>
-          </li>
-          </ul>
-        <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <h2 style="text-align: center;">Cepstrum</h2>
-        <p>A conglomeration of the typical seniors a fresher comes across and the 2 am friends hostellers make during
-          their stay here in campus, Cepstrum is the students’ society of the department of Electronics and Electrical
-          Engineering, IIT Guwahati.</p>
-        <p>The main aim of the society is primarily to provide a lending hand in the development of future engineers
-          and entrepreneurs either through brainstorming academics or the non-academics presented as a package everyone
-          wants to be a part of. It strives to provide the beneficiaries with an exposure to world class research
-          ventures through various activities ranging from <a href=""></a>workshops</a>, <a href="">talks</a>
-          to mentorship programmes. A registered student of EEE department of IIT Guwahati is a default member of
-          Cepstrum, and this is a privilege one will soon realise during the stay.</p>
-        <p>Our work? Give a sneak peek in our annual departmental magazine <a href="">InPhase</a>, launched
-          in the fall of 2007, the efforts envisioned to bring the readers in phase with the latest developments in the
-          field of electronics and related areas. Or you could check out the plethora of <a href="">resources</a>
-          to aid all your academic needs. One of the other important tasks of the student body is to bridge the gap
-          between students and faculty.</p>
-        <p>One of it's kind here in the campus, the <a href="">members</a> work towards the promotion of
-          knowledge among the peers.</p>
-          </div>
-          <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-            <h2 style="text-align: center;">Department of EEE</h2>
-        <p>Electronics and Electrical Engineering (EEE) deals with the learning of everything ranging from different
-          electrical machines to how our electrical systems work and sustain. It includes the engineering problems,
-          opportunities and needs of electrical, electronics, computer, telecommunication systems and related
-          industries.</p>
-        <p>The <a href="http://www.iitg.ernet.in/eee/">EEE department</a> was established in the IIT Guwahati during
-          its inception in 1995. The primary objective of the department has always been to provide a strong foundation
-          of design, theoretical and practical aspect of the course at <a href="http://www.iitg.ernet.in/eee/acadbtech.html#acadbtechStart">undergraduate</a>,
-          <a href="http://www.iitg.ernet.in/eee/acadmtech.html#acadmtechStart">postgraduate</a> and <a href="http://www.iitg.ernet.in/eee/acadphd.html#acadphdStart">doctoral</a>
-          levels in various areas of the field.</p>
-        <p>The department aims at teaching and research in the areas of <a href="http://www.iitg.ernet.in/eee/comdspgroup.html#comdspgroupStart">Communications
-            and Signal Processing</a>, <a href="http://www.iitg.ernet.in/eee/ctlinsgroup.html#ctlinsgroupStart">Control
-            and Instrumentation</a>, <a href="http://www.iitg.ernet.in/eee/powergroup.html#powergroupStart">Power
-            Electronics and Power Systems</a>, <a href="http://www.iitg.ernet.in/eee/biospeechgroup.html#biospeechgroupStart">Biomedical
-            and Speech Processing</a>, <a href="http://www.iitg.ernet.in/eee/vlsigroup.html#vlsigroupStart">VLSI design</a>,
-          and <a href="http://www.iitg.ernet.in/eee/imagegroup.html#imagegroupStart">Image Processing</a> to name a
-          few. The department is actively engaged in research churning out <a href="http://www.iitg.ernet.in/eee/publication.html#publicationStart">publications</a>
-          in renowned journals and conferences. Much of this research is <a href="http://www.iitg.ernet.in/eee/rndprojects.html#rndprojectsStart">funded</a>
-          by national and international funding agencies. The department laboratories are equipped with the state of
-          the art experimental and computational <a href="http://www.iitg.ernet.in/eee/facilities.html#facilitiesStart">facilities</a>
-          for undertaking activities in various fields.</p>
-        <p>In simple words, the engineers from our department are responsible for the designs of all the household
-          appliances like mobiles, TVs, motor, generators, cars, etc. without which we would still be living the life
-          of a caveman.</p>
-          </div>
+      <div class="carousel-item"style="background-image:
+        url('https://sairam.edu.in/wp-content/uploads/2015/05/power_electronics-1.jpg') ">
+        
+        <div class="content">
+          <h1>About the Department</h1>
+          <p>A conglomeration of the typical seniors a fresher comes across and the 2 am friends hostellers make during their stay here in campus, Cepstrum is the students’ society of the department of Electronics and Electrical Engineering, IIT Guwahati.
+
+            The main aim of the society is primarily to provide a lending hand in the development of future engineers and entrepreneurs either through brainstorming academics or the non-academics presented as a package everyone wants to be a part of. It strives to provide the beneficiaries with an exposure to world class research ventures through various activities ranging from workshops, talks to mentorship programmes. A registered student of EEE department of IIT Guwahati is a default member of Cepstrum, and this is a privilege one will soon realise during the stay.
+            
+            Our work? Give a sneak peek in our annual departmental magazine InPhase, launched in the fall of 2007, the efforts envisioned to bring the readers in phase with the latest developments in the field of electronics and related areas. Or you could check out the plethora of resources to aid all your academic needs. One of the other important tasks of the student body is to bridge the gap between students and faculty.
+            
+            One of it's kind here in the campus, the members work towards the promotion of knowledge among the peers.</p>
         </div>
       </div>
-      <br>
-      
-  <br>
+      <div class="carousel-item"style="background-image:
+        url('home/dept1.jpg')">
+
+      </div>
+      <div class="carousel-item"style="background-image:
+        url('home/coverpage.png'); width: 100%">
+
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators"
+      role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators"
+      role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>   
+ 
 {% endblock %}
