--- a/templates/base.html
+++ b/templates/base.html
@@ -86,6 +86,9 @@ body{
 
         {% endif %}
         <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{% url 'inphase:all' %}">Inphase</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{% url 'team:all' %}">Team</a>
         </li>
       </ul>
