--- a/team/templates/team_list.html
+++ b/team/templates/team_list.html
@@ -53,7 +53,7 @@ my-carousel" data-ride="carousel">
         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
       </svg></button>
     </div>
-    <div class="modal-content" style="background-color: black;">
+    <div class="modal-content" >
       <div class="row row-cols-1 row-cols-md-3 g-4">
         
         
@@ -98,7 +98,7 @@ my-carousel" data-ride="carousel">
         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
       </svg></button>
     </div>
-    <div class="modal-content" style="background-color: black;">
+    <div class="modal-content" >
       <div class="row row-cols-1 row-cols-md-3 g-4">
         
         {% for i in team_list %}
@@ -141,7 +141,7 @@ my-carousel" data-ride="carousel">
         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
       </svg></button>
     </div>
-    <div class="modal-content" style="background-color: black;">
+    <div class="modal-content" >
       <div class="row row-cols-1 row-cols-md-3 g-4">
         
         {% for i in team_list %}
@@ -184,7 +184,7 @@ my-carousel" data-ride="carousel">
         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
       </svg></button>
     </div>
-    <div class="modal-content" style="background-color: black;">
+    <div class="modal-content" >
       <div class="row row-cols-1 row-cols-md-3 g-4">
         
         {% for i in team_list %}
@@ -227,7 +227,7 @@ my-carousel" data-ride="carousel">
         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
       </svg></button>
     </div>
-    <div class="modal-content" style="background-color: black;">
+    <div class="modal-content" >
       <div class="row row-cols-1 row-cols-md-3 g-4">
         
         {% for i in team_list %}
