--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
 .content{
   text-align: center;
   padding-top: 5%;
-  padding-right: 60%;
-  padding-left: 4%;
+  padding-right: 4%;
+  padding-left: 60%;
   color: white;
   
 }
@@ -41,11 +41,15 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active" style="background-image:
-        url('home/dept4.jpg')">
+        url('https://live.staticflickr.com/7415/11546057593_1f49a71617_b.jpg'); opacity: 0.8;">
         
       </div>
+        <div class="carousel-item"style="background-image:
+          url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg')">
+  
+        </div>
       <div class="carousel-item"style="background-image:
-        url('https://sairam.edu.in/wp-content/uploads/2015/05/power_electronics-1.jpg') ">
+        url('/static/team/dept3.jpg') ">
         
         <div class="content">
           <h1>About the Department</h1>
@@ -59,11 +63,7 @@
         </div>
       </div>
       <div class="carousel-item"style="background-image:
-        url('home/dept1.jpg')">
-
-      </div>
-      <div class="carousel-item"style="background-image:
-        url('home/coverpage.png'); width: 100%">
+        url('/static/inphase/cover.png'); width: 100%">
 
       </div>
     </div>
