--- a/paperman/templates/paperman/paperman_list.html
+++ b/paperman/templates/paperman/paperman_list.html
@@ -2,8 +2,7 @@
 {% load humanize %}
 {% load bootstrap %}
 {% block content %}
-{% if user.is_authenticated %}
-
+<br><br><br>
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
 	Filter
   </button>
@@ -20,7 +19,7 @@
 			<form method="GET" class="">
 				{{filter.form|bootstrap}}
 				<button type="submit" class="btn btn-primary">Search</button>
-				<a href="{% url 'bios:all' %}" class="btn btn-secondary">Clear</a>
+				<a href="{% url 'paperman:all' %}" class="btn btn-secondary">Clear</a>
 				
 			</form>
 		</div>
@@ -32,35 +31,22 @@
   </div>
   <br><br>
 <div id="main">
-	{% if bio_list %}
+	{% if paperman_list %}
 	<div class="row">
 		{% for i in filter.qs %}
 		<div class="col-xs-12 col-sm-4 col-md-4">
 
 			<div class="card mx-5 my-5" style="width: 18rem;">
-				<img class="card-img-top" src="{{i.picture}}" alt="{{i.name}}" style="width: 18rem;height: 15rem;">
 				<div class="card-body">
 					<h5 class="card-title text-muted">{{i.name}}</h5>
-					<h6 class="card-subtitle mb-2 text-muted">{{i.branch}}</h6>
-					<p class="card-text text-muted">Batch of {{i.year_of_graduation}}</p>
-					<div class="card-footer">
-						<a href="{% url 'alumni:alumni_detail' i.id %}" class="btn btn-outline-info">Read More </a>
-						{% if i.owner == user %}
-						<a href="{% url 'alumni:alumni_update' i.id %}" class="btn btn-outline-danger"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-								<path fill-rule="evenodd"
-									d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" />
-							</svg></a>
-						{% endif %}
-					</div>
+					<h6 class="card-subtitle mb-2 text-muted"></h6>
+					<p class="card-text text-muted"></p>
 				</div>
 			</div>
 		</div>
 		{% endfor %}
 	</div>
 
-	{% else %}
-	<p>There are no bio in the database.</p>
-	{% endif %}
 </div>
 
 {% endif %}
