--- a/celebration/templates/celebration/celebration_list.html
+++ b/celebration/templates/celebration/celebration_list.html
@@ -1,13 +1,63 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
+{% block css %}
+<style>
+    .carousel-item {
+        height: 100vh;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
 
-{% block content %}
-<br><br><br>
-    <h1>this is celebration list </h1>
-    
-    {% for i in celebration_list %}
-    <h1><a href="{% url 'celebration:celebration_detail' i.id %}">{{i.name}}</a></h1>
-       
-    {% endfor %}
-        
-{% endblock content %}
-    
+    }
+
+    .content {
+        text-align: center;
+        padding-top: 5%;
+        padding-right: 4%;
+        padding-left: 60%;
+        color: white;
+
+    }
+</style>
+
+{% endblock %}
+{% block carousel %}
+<div id="carouselExampleIndicators" class="carousel slide my-carousel
+    my-carousel" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4" class="active"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+
+        {% for i in celebration_list %}
+
+
+
+        <div class="carousel-item {% if i.id == 3 %}active{% else %}{% endif %}" style="background-image:
+        url('{{i.pic.url}}'); opacity: 0.8;">
+            <div style="text-align: center; padding-top: 40%;">
+                <a href="{% url 'celebration:celebration_detail' i.id %}" class="btn btn-info">
+                    <h1>See pics</h1>
+                </a>
+            </div>
+
+        </div>
+        {% endfor %}
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+{% endblock %}
