--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@ body{
             <a class="dropdown-item" href="{% url 'inphase:all' %}">Inphase</a>
             <a class="dropdown-item" href="{% url 'inplace:all' %}">Inplace</a>
             <a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Inked Intellects</a>
-            <a class="dropdown-item" href="{% url 'inked_intellects:all' %}">Paperman</a>
+            <a class="dropdown-item" href="{% url 'paperman:all' %}">Paperman</a>
           </div>
         </li>
         <li class="nav-item dropdown active" class="">
