--- a/templates/index.html
+++ b/templates/index.html
@@ -48,20 +48,12 @@
           url('https://static.theprint.in/wp-content/uploads/2020/03/IITG.jpg')">
   
         </div>
-      <div class="carousel-item"style="background-image:
-        url('/static/team/dept3.jpg') ">
-        
-        <div class="content">
-          <h1>About the Department</h1>
-          <p>A conglomeration of the typical seniors a fresher comes across and the 2 am friends hostellers make during their stay here in campus, Cepstrum is the students’ society of the department of Electronics and Electrical Engineering, IIT Guwahati.
-
-            The main aim of the society is primarily to provide a lending hand in the development of future engineers and entrepreneurs either through brainstorming academics or the non-academics presented as a package everyone wants to be a part of. It strives to provide the beneficiaries with an exposure to world class research ventures through various activities ranging from workshops, talks to mentorship programmes. A registered student of EEE department of IIT Guwahati is a default member of Cepstrum, and this is a privilege one will soon realise during the stay.
-            
-            Our work? Give a sneak peek in our annual departmental magazine InPhase, launched in the fall of 2007, the efforts envisioned to bring the readers in phase with the latest developments in the field of electronics and related areas. Or you could check out the plethora of resources to aid all your academic needs. One of the other important tasks of the student body is to bridge the gap between students and faculty.
-            
-            One of it's kind here in the campus, the members work towards the promotion of knowledge among the peers.</p>
+        <div class="carousel-item"data-interval="9000">
+          <video autoplay muted loop width="100%" height="130%" id="myVideo">
+            <source src="https://drive.google.com/uc?export=download&id=1EZyLXoTGOUd2YLC11fzvXRCZ-vTVzta9" type="video/mp4">
+        </video>
+         
         </div>
-      </div>
       <div class="carousel-item"style="background-image:
         url('/static/inphase/cover.png'); width: 100%">
 
