--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,11 @@ body{
   color: white;
 }
 
+NavItem{
+  float:right;
+}
+
+
 
 
 
@@ -47,8 +52,8 @@ body{
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         {% if user.is_authenticated %}
         <li class="nav-item dropdown active" class="">
           <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -85,7 +90,7 @@ body{
         {% else %}
 
         {% endif %}
-        <li class="nav-item dropdown active" class="">
+        <!-- <li class="nav-item dropdown active" class="">
           <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Initiatives
           </a>
@@ -103,19 +108,28 @@ body{
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="{% url 'celebration:all' %}">Celebrations</a>
           </div>
+        </li> -->
+        <li class="nav-item active NavItem mx-3">
+          <a class="nav-link" aria-current="page" href="">Home</a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item active NavItem mx-3">
+          <a class="nav-link" aria-current="page" href="">Initiatives</a>
+        </li>
+        <li class="nav-item active NavItem mx-3">
+          <a class="nav-link" aria-current="page" href="">Events</a>
+        </li>
+        <li class="nav-item active NavItem mx-3">
           <a class="nav-link" aria-current="page" href="{% url 'team:all' %}">Team</a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
+      <!-- <ul class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
         <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">LOGOUT</a></li>
         {% else %}
         <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">Login</a></li>
         {% endif %}
     </div>
-      </ul>
+      </ul> -->
 
     </div>
   </div>
