Linked event-celebreation and anges in celebration

--- a/templates/base.html
+++ b/templates/base.html
@@ -116,7 +116,7 @@ NavItem{
           <a class="nav-link" aria-current="page" href="{% url 'inphase:all' %}">Initiatives</a>
         </li>
         <li class="nav-item active NavItem mx-3">
-          <a class="nav-link" aria-current="page" href="">Events</a>
+          <a class="nav-link" aria-current="page" href="{% url 'celebration:all' %}">Events</a>
         </li>
         <li class="nav-item active NavItem mx-3">
           <a class="nav-link" aria-current="page" href="{% url 'team:all' %}">Team</a>
