--- a/celebration/templates/celebration/celebration_list.html
+++ b/celebration/templates/celebration/celebration_list.html
@@ -21,6 +21,21 @@
 
     }
 
+    .carousel-item-content {
+        /* margin-top: 20%;
+    margin-left: 15%;
+    margin-right: 30%; */
+        font-size: 24px;
+    }
+
+    .carousel-item-screen {
+        color: white;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        padding: 15% 20% 0 15%;
+    }
+
 #pics {
     color: white;
     background-color: transparent;
@@ -58,6 +73,19 @@
 
         <div class="carousel-item {% if i.id == 3 %}active{% else %}{% endif %}" style="background-image:
         url('{{i.pic.url}}'); opacity: 0.8;">
+
+            <div class="carousel-item-screen">
+                <div class="carousel-item-content">
+                <h1><b>{{object.name}}</b> </h1>
+                <br>
+                <p>
+                    {{object.desc}}
+                </p>
+                </div>
+
+
+            </div>
+
             <div style="text-align: center; padding-top: 40%;">
                 <a href="{% url 'celebration:celebration_detail' i.id %}">
                     <button id="pics">
