--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
   }
 
   .link-button{
-    text-decoration: none;
+    
     color: white;
     background-color: #555555;
     display: inline-block;
@@ -85,6 +85,9 @@
             A conglomeration of the typical seniors a fresher comes across and the 2 am friends hostellers make during
             their stay here in campus, Cepstrum is the students' society of the department of Electronics and Electrical
             Engineering, IIT Guwahati.
+            <br>
+            <br>
+            <a href="{% url 'team:all' %}" class="link-button">Know More</a>
           </p>
         </div>
 
