--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@ NavItem{
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0" style="font-size: 1.5em;">
         {% if user.is_authenticated %}
         <li class="nav-item dropdown active" class="">
           <a class="nav-link dropdown-toggle" href="" id="dropdownMenuButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
